fix spacing

--- a/public/css/ferment.css
+++ b/public/css/ferment.css
@@ -16,7 +16,6 @@
   justify-content: space-between;
   align-items: baseline;
   gap: 1rem;
-  padding-block-end: 1rem;
 }
 .ferment-tagged::before {
   position: absolute;
@@ -54,10 +53,8 @@
   margin-inline: auto 0;
 }
 .ferment-details {
-  padding-block: 1rem;
+  padding: 1rem 0;
   list-style: none;
-  margin: 0;
-  padding: 0;
   text-align: center;
   display: flex;
   justify-content: space-around;
